--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="shortcut icon" href="img/favicon-16x16.png" type="image/x-icon">
- <link rel="stylesheet" href="css/style.min.css?_v=20221123150138">
+ <link rel="stylesheet" href="css/style.min.css?_v=20221123170135">
  <title>SRP Group</title>
 </head>
-<body>
+<body class="body"> 
+ <div class="page">
+ <script src="./js/loaded.js?_v=20221123170135"></script>
 <header class="header">
  <div class="wrapper-1300">
   <div class="header-mail">
@@ -80,7 +82,8 @@
   </div>
  </div>
 </footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221123150138"></script>
-<script src="./js/index.js?_v=20221123150138"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221123170135"></script>
+<script src="./js/index.js?_v=20221123170135"></script>
+</div>
 </body>
 </html>
